--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  This is a gulp starter!
+  <h1>Fête du vin 2017</h1>
   
   <!--build:js js/main.min.js -->
   <script src="js/lib/a-library.js"></script>
